update obb and legacy conversion

--- a/docs/jupyter/t_geometry/pointcloud.ipynb
+++ b/docs/jupyter/t_geometry/pointcloud.ipynb
@@ -53,19 +53,24 @@
     "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float64))\n",
     "print(pcd, '\\n')\n",
     "# Create a point cloud from open3d tensor on GPU.\n",
-    "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float32, o3c.Device(\"cuda:0\")))\n",
+    "pcd = o3d.t.geometry.PointCloud(\n",
+    "    o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float32, o3c.Device(\"cuda:0\")))\n",
     "print(pcd, '\\n')\n",
     "\n",
     "# Special creation.\n",
     "# Create a point cloud from numpy array.\n",
-    "pcd = o3d.t.geometry.PointCloud(np.array([[0, 0, 0], [1, 1, 1]], dtype=np.float32))\n",
+    "pcd = o3d.t.geometry.PointCloud(\n",
+    "    np.array([[0, 0, 0], [1, 1, 1]], dtype=np.float32))\n",
     "print(pcd, '\\n')\n",
     "# Create a point cloud from python list.\n",
     "pcd = o3d.t.geometry.PointCloud([[0., 0., 0.], [1., 1., 1.]])\n",
     "print(pcd, '\\n')\n",
     "\n",
     "# Error creation. The point cloud must have shape of (N, 3).\n",
-    "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([0, 0, 0, 0], o3c.float32))"
+    "try:\n",
+    "    pcd = o3d.t.geometry.PointCloud(o3c.Tensor([0, 0, 0, 0], o3c.float32))\n",
+    "except:\n",
+    "    print(f'Error creation. The point cloud must have shape of (N, 3).')\n"
    ]
   },
   {
@@ -125,6 +130,31 @@
     "labels = pcd.point.labels\n",
     "print('labels: ')\n",
     "print(labels, '')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conversion between tensor and legacy PointCloud\n",
+    "PointCloud can be converted to/from legacy `open3d.geometry.PointCloud`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "legacy_pcd = pcd.to_legacy()\n",
+    "print(legacy_pcd, '\\n')\n",
+    "\n",
+    "tensor_pcd = o3d.t.geometry.PointCloud.from_legacy(legacy_pcd)\n",
+    "print(tensor_pcd, '\\n')\n",
+    "\n",
+    "# Convert from legacy point cloud with data type of float64.\n",
+    "tensor_pcd_f64 = o3d.t.geometry.PointCloud.from_legacy(legacy_pcd, o3c.float64)\n",
+    "print(tensor_pcd_f64, '\\n')"
    ]
   },
   {
@@ -402,13 +432,15 @@
    "source": [
     "aabb = pcd.get_axis_aligned_bounding_box()\n",
     "aabb.set_color(o3c.Tensor([1, 0, 0], o3c.float32))\n",
-    "# obb = pcd.get_oriented_bounding_box()\n",
-    "# obb.color = (0, 1, 0)\n",
-    "o3d.visualization.draw_geometries([pcd.to_legacy(), aabb.to_legacy()],\n",
-    "                                  zoom=0.7,\n",
-    "                                  front=[0.5439, -0.2333, -0.8060],\n",
-    "                                  lookat=[2.4615, 2.1331, 1.338],\n",
-    "                                  up=[-0.1781, -0.9708, 0.1608])"
+    "obb = pcd.get_oriented_bounding_box()\n",
+    "obb.set_color(o3c.Tensor([0, 1, 0], o3c.float32))\n",
+    "o3d.visualization.draw_geometries(\n",
+    "    [pcd.to_legacy(), aabb.to_legacy(),\n",
+    "     obb.to_legacy()],\n",
+    "    zoom=0.7,\n",
+    "    front=[0.5439, -0.2333, -0.8060],\n",
+    "    lookat=[2.4615, 2.1331, 1.338],\n",
+    "    up=[-0.1781, -0.9708, 0.1608])"
    ]
   },
   {
@@ -744,7 +776,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit (microsoft store)",
+   "display_name": "Python 3.8.13 ('open3d')",
    "language": "python",
    "name": "python3"
   },
@@ -758,12 +790,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3c9f9a500ca684ee401c6824dc59bb17f7418a54cdadde026de4b201d5bd57e6"
+    "hash": "d3ff712f491db3b4ccd20005f84e312b261650c105d83adbc3f83f5ecf60b94b"
    }
   }
  },
