--- a/docs/jupyter/t_geometry/pointcloud.ipynb
+++ b/docs/jupyter/t_geometry/pointcloud.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-09T15:53:09.502685Z",
+     "start_time": "2022-12-09T15:53:08.653426Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import open3d as o3d\n",
@@ -14,10 +19,10 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "# only needed for tutorial, monkey patches visualization\n",
-    "sys.path.append('..')\n",
+    "# Only needed for tutorial, monkey patches visualization\n",
+    "sys.path.append(\"..\")\n",
     "import open3d_tutorial as o3dtut\n",
-    "# change to True if you want to interact with the visualization windows\n",
+    "# Change to True if you want to interact with the visualization windows\n",
     "o3dtut.interactive = not \"CI\" in os.environ"
    ]
   },
@@ -35,42 +40,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-09T15:53:09.507147Z",
+     "start_time": "2022-12-09T15:53:09.503719Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Create a empty point cloud on CPU.\n",
     "pcd = o3d.t.geometry.PointCloud()\n",
-    "print(pcd, '\\n')\n",
+    "print(pcd, \"\\n\")\n",
     "\n",
-    "# Create a empty point cloud on GPU.\n",
-    "pcd = o3d.t.geometry.PointCloud(o3c.Device(\"cuda:0\"))\n",
-    "print(pcd, '\\n')\n",
+    "# To create a point cloud on CUDA, specify the device.\n",
+    "# pcd = o3d.t.geometry.PointCloud(o3c.Device(\"cuda:0\"))\n",
     "\n",
-    "# Create a point cloud from open3d tensor with data type of float32.\n",
+    "# Create a point cloud from open3d tensor with dtype of float32.\n",
     "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float32))\n",
-    "print(pcd, '\\n')\n",
-    "# Create a point cloud from open3d tensor with data type of float64.\n",
-    "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float64))\n",
-    "print(pcd, '\\n')\n",
-    "# Create a point cloud from open3d tensor on GPU.\n",
-    "pcd = o3d.t.geometry.PointCloud(\n",
-    "    o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float32, o3c.Device(\"cuda:0\")))\n",
-    "print(pcd, '\\n')\n",
+    "print(pcd, \"\\n\")\n",
     "\n",
-    "# Special creation.\n",
-    "# Create a point cloud from numpy array.\n",
+    "# Create a point cloud from open3d tensor with dtype of float64.\n",
+    "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float64))\n",
+    "print(pcd, \"\\n\")\n",
+    "\n",
+    "# Create a point cloud from numpy array. The array will be copied.\n",
     "pcd = o3d.t.geometry.PointCloud(\n",
     "    np.array([[0, 0, 0], [1, 1, 1]], dtype=np.float32))\n",
-    "print(pcd, '\\n')\n",
+    "print(pcd, \"\\n\")\n",
+    "\n",
     "# Create a point cloud from python list.\n",
     "pcd = o3d.t.geometry.PointCloud([[0., 0., 0.], [1., 1., 1.]])\n",
-    "print(pcd, '\\n')\n",
+    "print(pcd, \"\\n\")\n",
     "\n",
     "# Error creation. The point cloud must have shape of (N, 3).\n",
     "try:\n",
     "    pcd = o3d.t.geometry.PointCloud(o3c.Tensor([0, 0, 0, 0], o3c.float32))\n",
     "except:\n",
-    "    print(f'Error creation. The point cloud must have shape of (N, 3).')\n"
+    "    print(f\"Error creation. The point cloud must have shape of (N, 3).\")\n"
    ]
   },
   {
@@ -85,14 +91,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-09T15:53:15.378492Z",
+     "start_time": "2022-12-09T15:53:15.375715Z"
+    }
+   },
    "outputs": [],
    "source": [
     "map_to_tensors = {}\n",
-    "# The `positions` attribute must be specified.\n",
-    "map_to_tensors['positions'] = o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float32)\n",
-    "map_to_tensors['normals'] = o3c.Tensor([[0, 0, 1], [0, 0, 1]], o3c.float32)\n",
-    "map_to_tensors['labels'] = o3c.Tensor([0, 1], o3c.int64)\n",
+    "\n",
+    "# - The \"positions\" attribute must be specified.\n",
+    "# - Common attributes include \"colors\" and \"normals\". \n",
+    "# - You may also use custom attributes, such as \"labels\".\n",
+    "# - The value of an attribute could be of any shape and dtype. Its correctness\n",
+    "#   will only be checked when the attribute is used by some algorithms.\n",
+    "map_to_tensors[\"positions\"] = o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float32)\n",
+    "map_to_tensors[\"normals\"] = o3c.Tensor([[0, 0, 1], [0, 0, 1]], o3c.float32)\n",
+    "map_to_tensors[\"labels\"] = o3c.Tensor([0, 1], o3c.int64)\n",
     "\n",
     "pcd = o3d.t.geometry.PointCloud(map_to_tensors)\n",
     "print(pcd)"
@@ -102,13 +118,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PointCloud attributes setter and getter"
+    "## Point cloud attributes setter and getter"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-09T15:53:24.681751Z",
+     "start_time": "2022-12-09T15:53:24.678427Z"
+    }
+   },
    "outputs": [],
    "source": [
     "pcd = o3d.t.geometry.PointCloud(o3c.Tensor([[0, 0, 0], [1, 1, 1]], o3c.float32))\n",
@@ -116,27 +137,27 @@
     "pcd.point.normals = o3c.Tensor([[0, 0, 1], [0, 0, 1]], o3c.float32)\n",
     "pcd.point.colors = o3c.Tensor([[1, 0, 0], [0, 1, 0]], o3c.float32)\n",
     "pcd.point.labels = o3c.Tensor([0, 1], o3c.int64)\n",
-    "print(pcd, '\\n')\n",
+    "print(pcd, \"\\n\")\n",
     "\n",
     "# Set by numpy array or python list.\n",
     "pcd.point.normals = np.array([[0, 0, 1], [0, 0, 1]], dtype=np.float32)\n",
     "pcd.point.intensity = [0.4, 0.4]\n",
-    "print(pcd, '\\n')\n",
+    "print(pcd, \"\\n\")\n",
     "\n",
     "# Get attributes.\n",
     "posisions = pcd.point.positions\n",
-    "print('posisions: ')\n",
-    "print(posisions, '\\n')\n",
+    "print(\"posisions: \")\n",
+    "print(posisions, \"\\n\")\n",
     "labels = pcd.point.labels\n",
-    "print('labels: ')\n",
-    "print(labels, '')"
+    "print(\"labels: \")\n",
+    "print(labels, \"\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conversion between tensor and legacy PointCloud\n",
+    "## Conversion between tensor and legacy point cloud\n",
     "PointCloud can be converted to/from legacy `open3d.geometry.PointCloud`."
    ]
   },
@@ -147,14 +168,14 @@
    "outputs": [],
    "source": [
     "legacy_pcd = pcd.to_legacy()\n",
-    "print(legacy_pcd, '\\n')\n",
+    "print(legacy_pcd, \"\\n\")\n",
     "\n",
     "tensor_pcd = o3d.t.geometry.PointCloud.from_legacy(legacy_pcd)\n",
-    "print(tensor_pcd, '\\n')\n",
+    "print(tensor_pcd, \"\\n\")\n",
     "\n",
     "# Convert from legacy point cloud with data type of float64.\n",
     "tensor_pcd_f64 = o3d.t.geometry.PointCloud.from_legacy(legacy_pcd, o3c.float64)\n",
-    "print(tensor_pcd_f64, '\\n')"
+    "print(tensor_pcd_f64, \"\\n\")"
    ]
   },
   {
@@ -336,9 +357,9 @@
    "outputs": [],
    "source": [
     "normals = downpcd.point.normals\n",
-    "print('Print first 5 normals of the downsampled point cloud.')\n",
-    "print(normals[:5], '\\n')\n",
-    "print('Convert normals tensor into numpy array.')\n",
+    "print(\"Print first 5 normals of the downsampled point cloud.\")\n",
+    "print(normals[:5], \"\\n\")\n",
+    "print(\"Convert normals tensor into numpy array.\")\n",
     "normals_np = normals.numpy()\n",
     "print(normals_np[:5])"
    ]
@@ -384,7 +405,7 @@
    "outputs": [],
    "source": [
     "indices = vol.crop_in_polygon(pcd.to_legacy())\n",
-    "print(f'Cropped indices length: {len(indices)}') "
+    "print(f\"Cropped indices length: {len(indices)}\") "
    ]
   },
   {
@@ -747,7 +768,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Boundary Detection\n",
+    "## Boundary detection\n",
     "Open3D implements the boundary detection algorithm inspired by [PCL](https://pointclouds.org/documentation/classpcl_1_1_boundary_estimation.html). The algorithm find the boundary points among a unordered point cloud by analyzing the angle among the normals of a point and its neighbors. The method has three arguments: `radius` and `max_nn` specify the hybrid nearest search parameters; The `angle_threshold` defines the maximum angle between the normals of a point and its neighbors to be considered as a boundary point. The functions returns the boundary points and a boolean tensor of the same size as the input point cloud."
    ]
   },
@@ -776,7 +797,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('open3d')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -790,12 +811,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d3ff712f491db3b4ccd20005f84e312b261650c105d83adbc3f83f5ecf60b94b"
+    "hash": "c36d4cd2cfce5c26977a9560a8c96efbe52e59f8182dcd6a297957684d25bbef"
    }
   }
  },
